<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="32dp"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/basic_auth_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/basic_auth_info"/>

    <EditText
        android:id="@+id/basic_auth_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/basic_auth_login"
        android:inputType="textPersonName"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/basic_auth_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/basic_auth_password"
        android:inputType="textPassword"
        android:padding="8dp"/>

    <Button
        android:id="@+id/basic_auth_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="16dp"
        android:text="@string/basic_auth_button"/>

</LinearLayout>
